# diffusion

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  PHSD_event.f  df_coms.f  df_main.f  hydro_3d_hdf5.for  jet_output_hdf5.for  parameter_inp.f  qhat.f  rad_fnc.f  rad_inp.f  read_HQ_init.f  ucoms.f
